# flashcards-workshop-backend-example

./: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  API_SCHEMA.md  Dockerfile  Makefile  README.md  TASKS.md  compose.prod.yml  compose.yml  conftest.py  manage.py  pyproject.toml
fixtures/: accounts.customuser.yaml
flashcard_workshop/: asgi.py  urls.py  wsgi.py
flashcard_workshop/accounts/: admin.py  apps.py  serializers.py
flashcard_workshop/accounts/tests/: test_models.py
flashcard_workshop/flashcards/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
flashcard_workshop/flashcards/migrations/: 0001_initial.py  0002_remove_flashcardset_description_and_more.py
flashcard_workshop/flashcards/tests/: conftest.py  test_views.py
flashcard_workshop/settings/: base.py  local.py  production.py  tests.py
